Доработаны замечания по ревью